feat(stats): events stats implemented
